[tool.poetry]
name = "machinelearningpath"
version = "0.1.0"
description = ""
authors = ["alex <alex@localhost.com>"]
readme = "README.md"
packages = [{include = "machinelearningpath", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
seaborn = "^0.12.2"
nltk = "^3.8.1"
beautifulsoup4 = "^4.11.2"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
